# kedge-contracts

./: .gitignore  Cargo.toml  README.md  REUSE.toml
crates/kedge-cli/: Cargo.toml
crates/kedge-cli/src/: main.rs
crates/kedge-contracts/: Cargo.toml
crates/kedge-contracts-core/: Cargo.toml
crates/kedge-contracts-core/src/: lib.rs  traits.rs
crates/kedge-contracts-macros/: Cargo.toml
crates/kedge-contracts-macros/src/: lib.rs  validate.rs
crates/kedge-contracts-macros/src/backends/: mod.rs
crates/kedge-contracts-macros/src/backends/test/: mod.rs  proptest.rs
crates/kedge-contracts-macros/src/backends/verify/: flux.rs  kani.rs
crates/kedge-contracts-tests/: Cargo.toml
crates/kedge-contracts-tests/src/: lib.rs
crates/kedge-contracts/src/: lib.rs
crates/kedge-contracts/src/backends/: flux.rs  kani.rs  mod.rs  traits.rs
crates/kedge-contracts/src/backends/test/: mod.rs  proptest.rs
crates/kedge-contracts/src/backends/verify/: kani.rs  mod.rs
crates/kedge-harness/: Cargo.toml
crates/kedge-spec/: Cargo.toml
crates/kedge-synth/: Cargo.toml
crates/kedge-test/: Cargo.toml
crates/kedge-verify/: Cargo.toml
crates/kedge-verify/src/: lib.rs
