# SPDX-FileCopyrightText: 2026 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
# SPDX-License-Identifier: MIT

[workspace]
members = [
  "crates/kedge-contracts-core",
  "crates/kedge-test",
  "crates/kedge-verify",
  "crates/kedge-contracts",
  "crates/kedge-contracts-tests",
  "crates/kedge-cli",
  "crates/kedge-synth",
  "crates/kedge-spec",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
license = "MIT"
