# SPDX-FileCopyrightText: 2026 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
# SPDX-License-Identifier: MIT

[workspace]
members = [
  "crates/kedge-contracts-core",
  "crates/kedge-contracts-macros",
  "crates/kedge-contracts",
  "crates/kedge-contracts-tests",
]
resolver = "3"

[workspace.package]
version = "0.8.1"
license = "MIT"

[workspace.dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.44"
syn = { version = "2.0.117", features = ["full"] }
