# SPDX-FileCopyrightText: 2026 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "kedge-contracts-macros"
edition = "2024"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
kedge-contracts-core = { path = "../kedge-contracts-core" }
flux-rs = { git = "https://github.com/flux-rs/flux.git", optional = true }
proptest = { version = "1.10.0", optional = true, features = ["attr-macro"] }

[target.'cfg(kani_ra)'.dependencies]
kani = { git = "https://github.com/model-checking/kani", optional = true }
