# SPDX-FileCopyrightText: 2026 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "kedge-contracts-tests"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kedge-contracts = { path = "../kedge-contracts", features = [
  "flux-rs",
  "kani",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
