# SPDX-FileCopyrightText: 2026 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "kedge-contracts"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kedge-contracts-macros = { path = "../kedge-contracts-macros", features = [
  "flux-rs",
  "kani",
  "proptest",
] }
proptest = { version = "1.10.0", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
proptest = ["dep:proptest", "kedge-contracts-macros/proptest"]
