# SPDX-FileCopyrightText: 2026 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "kedge-contracts"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kedge-contracts-macros = { path = "../kedge-contracts-macros" }
proptest = { version = "1.10.0", optional = true }
flux-rs = { git = "https://github.com/flux-rs/flux.git", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
proptest = ["dep:proptest", "kedge-contracts-macros/proptest"]
tests = ["proptest"]
kani = ["kedge-contracts-macros/kani"]
flux-rs = ["dep:flux-rs", "kedge-contracts-macros/flux-rs"]
verify = ["kani", "flux-rs"]
all = ["tests", "verify"]
